--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
- Created by https://www.gitignore.io/api/osx,node
+Created by https://www.gitignore.io/api/osx,node
 
 ### OSX ###
 .DS_Store
@@ -44,3 +44,4 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+ws.xcodeproj/project.xcworkspace/xcuserdata/*
